Login page logo was covered (fixed) | FINAL

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -78,6 +78,7 @@
   height: 400px;
   justify-content: center;
   align-items: center;
+  padding-top: 150px;
 }
 
 .login-page img{
